# Super-mario-bros-PPO-pytorch

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  test-hard.py  test.py  train.py
logs/1_1/: 0.json
output/: obs_1_1.txt  obs_1_2.txt
scripts/: sample.sh  test.sh  train.sh  upload.sh  upload_hf.py
src/: config.py  env.py  monitor.py  process.py  schema.py  utils.py
trained_models/: ppo_super_mario_bros_1_1  ppo_super_mario_bros_1_2
trained_models_old/: ppo_super_mario_bros_1_1  ppo_super_mario_bros_1_2
